tests/ui/closures/closure-wrong-kind.stderr
error[E0277]: expected a `Fn(u32)` closure, found `{closure@$DIR/closure-wrong-kind.rs:10:19: 10:22}`
  --> $DIR/closure-wrong-kind.rs:11:9
   |
LL |     bar(closure);
   |     --- ^^^^^^^ expected an `Fn(u32)` closure, found `{closure@$DIR/closure-wrong-kind.rs:10:19: 10:22}`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Fn<(u32,)>` is not implemented for closure `{closure@$DIR/closure-wrong-kind.rs:10:19: 10:22}`
   = note: `{closure@$DIR/closure-wrong-kind.rs:10:19: 10:22}` implements `FnOnce`, but it must implement `Fn`, which is more general
note: required by a bound in `bar`
  --> $DIR/closure-wrong-kind.rs:6:11
   |
LL | fn bar<T: Fn(u32)>(_: T) {}
   |           ^^^^^^^ required by this bound in `bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
